Prevent header from jumping

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -389,7 +389,7 @@ textarea {
 }
 
 .header--fixed {
-  margin-bottom: 56px;
+  margin-bottom: 58px;
 }
 
 .header--fixed .header__content {
